cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_twincat/negative_zero_twincat_real/Untitled1/Untitled1.plcproj
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<Project>
  <ItemGroup>
    <Compile Include="POUs\makeTupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj0_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj1_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj2_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj3_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj4_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj5_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj6_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj7_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj8_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj9_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj10_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj11_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj12_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\proj13_TupleStruct_1.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="POUs\MAIN.TcPOU">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="DUTs\STATE.TcDUT">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="DUTs\enum_E.TcDUT">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="DUTs\TupleStruct_1.TcDUT">
      <SubType>Code</SubType>
    </Compile>
    <Compile Include="GVLs\TIMERS.TcGVL">
      <SubType>Code</SubType>
    </Compile>
    <Folder Include="DUTs"/>
    <Folder Include="GVLs"/>
    <Folder Include="POUs"/>
  </ItemGroup>
</Project>
